nonPH_analysis/CCA/logs/archives/pt_cca800809.err
/var/spool/slurm/d/job800809/slurm_script: line 27: cd: /scratch/tyoeasley/brain_represetnations/src_MATLAB: No such file or directory
/var/spool/slurm/d/job800809/slurm_script: line 28: matlab: command not found
Traceback (most recent call last):
  File "/scratch/tyoeasley/brain_representations/src_py/run_lindecomp_perm.py", line 7, in <module>
    import lindecomp_permtest as ld_pt
  File "/mnt/beegfs/scratch/tyoeasley/brain_representations/src_py/lindecomp_permtest.py", line 14
    listpath=list_path, decomp_method='CCA', chkpt=True): 
           ^
SyntaxError: invalid syntax
